  Fixed issue MR-130 - Issues duplicating folders
  Fixed issue MR-158 - Password field not accepting Pipe
  Fixed issue MR-330 - Portable version saves log to user's profile folder
  Fixed issue MR-333 - Unnecessary prompt for 'close all open connections?'
  Added detection of newer versions of connection files and database schemata. mRemoteNG will now refuse to open them to avoid data loss.

1.70 (2013-02-25):
  Fixed issue MR-332 - Can't select different tab with one click after disconnecting existing tab
  Fixed issue MR-338 - PuTTYNG crashing on fresh install of mRemoteNG
  Re-enabled PuTTYNG integration enhancements on Windows 8

1.70 Release Candidate 1 (2013-02-22):
  Fixed issue MR-183 - Error trying to save connections when using SQL - Invalid column name _parentConstantId
  Fixed issue MR-225 - Tabs do not open in a panel until multiple panels are displayed.
  Fixed issue MR-229 - Integrated PuTTY doesn't work in Windows 8 RP
  Fixed issue MR-264 - Windows 8 support
  Fixed issue MR-317 - Difficulty right-clicking on Tab
  Fixed issue MR-318 - Wrong tab gets selected when tab names overflow on the tab bar
  Fixed issue MR-321 - New connection panel doesn't get panel header if its the only one or is moved
  Fixed issue MR-322 - Connection Button not listing servers
  Added option to always show panel tabs.
  Fixed "Decryption failed. Padding is invalid and cannot be removed." notification.
  Fixed KiTTY opening in a separate window when using a saved session.

1.70 Beta 2 (2013-02-18):
  Fixed issue MR-47 - Silent Installation Prompts for Language
  Fixed issue MR-54 - Error When disconnecting from SSL channel RDP
  Fixed issue MR-58 - Bug when duplicating connection in connection view 
  Fixed issue MR-68 - Config Window Loses Options
  Fixed issue MR-71 - Minimizing mRemoteNG causes temporary re-size of Putty sessions (windows)
  Fixed issue MR-80 - Reconnect previous sessions
  Fixed issue MR-81 - Problem Duplicating Folder w/ Sub-Folders